Make sure the user's preference to show or hide the close buttons takes effect as soon as the changes are applied. Not after restarting Konqueror.

BUG: 121792
FIXED-IN: 4.8.1
GUI: Removed portion of a tool tip text that is no longer valid.
(cherry picked from commit 2f63fe74e513580879cde3d4678d8268bd91da52)